load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "api_proto",
    srcs = ["api.proto"],
    deps = ["@com_google_protobuf//:any_proto"],
    visibility = ["//visibility:public"],
)


go_proto_library(
    name = "api_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
        "//tools:go_server",  # keep
        "//tools:go_client",  # keep
    ],
    importpath = "bazel-golang-wasm-protoc/protos/api",
    proto = ":api_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":api_go_proto"],
    importpath = "bazel-golang-wasm-protoc/protos/api",
    visibility = ["//visibility:public"],
)
