load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "bazel-golang-wasm-protoc/server",
    visibility = ["//visibility:public"],
    deps = ["//protos:go_default_library",
            "@in_gopkg_mgo_v2//:go_default_library",
            "@in_gopkg_mgo_v2//bson:go_default_library",
            ],
)
